# My-Auto-Arena

./: .gitignore  CMakeLists.txt  README.md
docs/: code_analysis.md  dev_log.md
src/: main.cpp  qt_main.cpp
src/core/: BattleEngine.cpp  BattleEngine.h  Board.cpp  Board.h  DragDropHandler.cpp  DragDropHandler.h  EnemySpawner.cpp  EnemySpawner.h  GameFSM.cpp  GameFSM.h  HeroUnits.cpp  HeroUnits.h  Pathfinder.cpp  Pathfinder.h  Player.cpp  Player.h  PvERoundRunner.cpp  PvERoundRunner.h  Tile.cpp  Tile.h  Unit.cpp  Unit.h
src/ui/: ConsoleRenderer.cpp  ConsoleRenderer.h
src/ui/qt/: ArenaScene.cpp  ArenaScene.h  QtMainWindow.cpp  QtMainWindow.h  SceneCoordMapper.cpp  SceneCoordMapper.h  TileGraphicsItem.cpp  TileGraphicsItem.h  UnitGraphicsItem.cpp  UnitGraphicsItem.h  UnitInfoPanel.cpp  UnitInfoPanel.h
tests/: CMakeLists.txt  test_battle_engine.cpp  test_board.cpp  test_console_renderer.cpp  test_drag_drop.cpp  test_enemy_spawner.cpp  test_game_fsm.cpp  test_hero_skills.cpp  test_pathfinder.cpp  test_player.cpp  test_pve_round_runner.cpp  test_scene_coord_mapper.cpp  test_unit.cpp
